--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+customers.service.url=http://localhost:8081
+products.service.url=http://localhost:8082
+account.service.url=http://localhost:8083
+transactions.service.url=http://localhost:8084
+banks.service.url=http://localhost:8085
