--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ products.service.url=http://localhost:8082
 account.service.url=http://localhost:8083
 transactions.service.url=http://localhost:8084
 banks.service.url=http://localhost:8085
+
+gateway.service.url=http://localhost:8090
